--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,3 @@
 PORT = 2121
 DB_STRING = mongodb+srv://guest:guest@cluster0.epbrb.mongodb.net/GroupProjec?retryWrites=true&w=majority
+API_KEY = http://www.omdbapi.com/?apikey=4899398e
