--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,3 @@
 PORT = 2121
 DB_STRING = mongodb+srv://guest:guest@cluster0.epbrb.mongodb.net/GroupProjec?retryWrites=true&w=majority
-API_KEY = http://www.omdbapi.com/?apikey=4899398e
+API_KEY = https://api.themoviedb.org/3/search/movie?api_key=3fd2be6f0c70a2a598f084ddfb75487c&query=
